[package]
name = "vortex_otp"
version = "0.1.2"
edition = "2021"
description = "A flexible One-Time Password (OTP) generation library for Rust."
license = "MIT"
authors = ["c4nzzin <c4nzin@github.com>"] 
repository = "https://github.com/c4nzin/vortex-otp-rust"
keywords = ["otp", "security", "authentication", "password", "generator"]
categories = ["authentication", "algorithms"]
readme = "README.md"

[dependencies]
rand = "0.8"
